--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1090,6 +1090,22 @@ body .shopify-policy__body {
   top: var(--header-height);
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -1313,6 +1329,14 @@ body .shopify-policy__body {
   height: var(--header-height);
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .w-0 {
   width: 0rem;
 }
@@ -1358,6 +1382,14 @@ body .shopify-policy__body {
   width: 100%;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
 .max-w-\[max-content\] {
   max-width: -moz-max-content;
   max-width: max-content;
@@ -1393,6 +1425,11 @@ body .shopify-policy__body {
 
 .translate-y-full {
   --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1578,9 +1615,21 @@ body .shopify-policy__body {
   border-bottom-width: 1px;
 }
 
+.border-t {
+  border-top-width: 1px;
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-black\/30 {
+  border-color: rgb(0 0 0 / 0.3);
+}
+
+.border-black\/10 {
+  border-color: rgb(0 0 0 / 0.1);
 }
 
 .border-b-black {
@@ -1595,6 +1644,11 @@ body .shopify-policy__body {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-grey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 232 232 / var(--tw-bg-opacity));
 }
 
 .bg-contain {
@@ -1648,6 +1702,16 @@ body .shopify-policy__body {
 .py-text-line {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pb-10 {
@@ -2362,14 +2426,4 @@ body .shopify-pc__prefs__header-actions button {
   .xl\:w-25 {
     width: 6.25rem;
   }
-}
-
-textarea,
-  input[type="text"],
-  input[type="email"],
-  input[type="password"],
-  input[type="button"],
-  input[type="submit"] {
-  -webkit-appearance: none;
-  border-radius: 0;
 }
