--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -220,7 +220,7 @@
 
 
         <div class="uppercase hidden md:block pl-gutter w-1/5">
-          {% render 'header-search', input_id: 'Search-In-Modal' %}
+          {% render 'header-search', screen_size: 'desktop' input_id: 'Search-In-Modal' %}
         </div>
 
         <div class="pl-gutter w-1/5">
