--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -68,9 +68,9 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__navigation-container {
-  display: grid;
-  grid-template-rows: 1fr auto;
-  align-content: space-between;
+/*  display: grid;*/
+/*  grid-template-rows: 1fr auto;*/
+/*  align-content: space-between;*/
   overflow-y: auto;
   height: 100%;
 }
