--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -123,8 +123,8 @@
               {%- endfor -%}
             </ul>
           </nav>
-          <div class="menu-drawer__utility-links list-menu leading-menu uppercase">
-            {% render 'header-search', input_id: 'Search-In-Modal' %}
+          <div class="menu-drawer__utility-links list-menu leading-menu uppercase mt-text-line">
+            {% render 'header-search', screen_size: 'mobile', input_id: 'Search-In-Modal' %}
             {%- if shop.customer_accounts_enabled -%}
               <div><a
                 href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
