--- a/assets/component-search.css
+++ b/assets/component-search.css
@@ -39,7 +39,8 @@
 }
 
 .header__search--mobile .search__input {
-  min-width: 150px;
+  width: 200px;
+  margin-right: 0;
 }
 
 .search__input.field__input::-webkit-search-cancel-button{
@@ -89,6 +90,11 @@
 .reset__button:not(:focus-visible):not(.focused) {
   box-shadow: inherit;
   background-color: inherit;
+}
+
+.search-modal__form .field {
+  display: flex;
+  align-items: center;
 }
 
 
