--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -2041,6 +2041,14 @@ body .shopify-pc__prefs__header-actions button {
   text-decoration-line: none;
 }
 
+.focus\:outline-0:focus {
+  outline-width: 0px;
+}
+
+.focus\:outline-offset-0:focus {
+  outline-offset: 0px;
+}
+
 .focus\:ring-0:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2049,6 +2057,10 @@ body .shopify-pc__prefs__header-actions button {
 
 .focus\:ring-offset-0:focus {
   --tw-ring-offset-width: 0px;
+}
+
+.focus-visible\:outline-offset-0:focus-visible {
+  outline-offset: 0px;
 }
 
 .focus-visible\:ring-inset:focus-visible {
