--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -18,13 +18,13 @@
     <div class="search-modal modal__content gradient" role="dialog" aria-modal="true" aria-label="{{ 'general.search.search' | t }}">
       <div class="search-modal__content{% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_vertical_offset < 0 %} search-modal__content-top{% else %} search-modal__content-bottom{% endif %}" tabindex="-1">
         {%- if settings.predictive_search_enabled -%}
-          <predictive-search class="search-modal__form" data-loading-text="{{ 'accessibility.loading' | t }}">
+          <predictive-search data-loading-text="{{ 'accessibility.loading' | t }}">
         {%- else -%}
-          <search-form class="search-modal__form">
+          <search-form>
         {%- endif -%}
             <form action="{{ routes.search_url }}" method="get" role="search" class="search search-modal__form">
               <div class="field">
-                <input class="search__input field__input focus:ring-0"
+                <input class="search__input field__input focus:outline-0 focus:ring-0"
                   id="{{ input_id }}"
                   type="search"
                   name="q"
