--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1642,6 +1642,11 @@ body .shopify-policy__body {
   background-color: rgb(232 232 232 / var(--tw-bg-opacity));
 }
 
+.bg-placeholder-gray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2382,10 +2387,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .lg\:block {
     display: block;
-  }
-
-  .lg\:hidden {
-    display: none;
   }
 
   .lg\:h-5 {
