--- a/sections/main-page-about.liquid
+++ b/sections/main-page-about.liquid
@@ -16,7 +16,7 @@
   </div>
   {% if image %}
     <div class="w-full col-span-3 md:col-end-[16] md:col-start-1">
-      {% render 'image', image: image, use_padding: true, sizes: "(min-width: 768px) 66vw, 100vw " %}
+      {% render 'image', placeholder_width: 200, image: image, use_padding: true, sizes: "(min-width: 768px) 66vw, 100vw " %}
     </div>
   {% endif %}
 </div>
