--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -1,5 +1,3 @@
-
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 
 <product-recommendations
@@ -7,6 +5,7 @@
   data-collection="{{ collection.handle }}"
   data-url="{{ routes.product_recommendations_url }}?section_id={{ section.id }}&product_id={{ product.id }}&limit={{ section.settings.products_to_show }}"
   >
+
   <div class="padding-x mt-12">
     <div class="block related-products overflow-hidden w-full">
       <h2 class="uppercase mb-gutter">
@@ -23,6 +22,12 @@
               card_product: recommendation
             %}
           </li>
+        {% else %}
+          {% for index in (1..4) %}
+            <li class="product-recommendations__item grid__item snap-normal snap-start w-[calc(50%-5px)] md:w-auto grow-0 shrink-0 md:pr-0">
+              <div class="bg-placeholder-gray" style="padding-bottom: 125%"></div>
+            </li>
+          {% endfor %}
         {% endfor %}
       </ul>
     </div>
