--- a/snippets/pdp-slider.liquid
+++ b/snippets/pdp-slider.liquid
@@ -15,8 +15,6 @@
     <div data-slider class="pdp-swiper overflow-hidden relative" id="GalleryViewer-{{ section.id }}">
       <div class="pdp-prev focus-visible:ring-inset flex items-center justify-center w-10 h-10 sm:w-15 sm:h-15 xl:w-25 xl:h-25">{% render 'icon-arrow', class: 'rotate-180 w-3 h-3 sm:w-4 sm:h-4 lg:w-5 lg:h-5' %}</div>
       <div class="pdp-next focus-visible:ring-inset flex items-center justify-center w-10 h-10 sm:w-15 sm:h-15 xl:w-25 xl:h-25">{% render 'icon-arrow', class: 'w-3 h-3 sm:w-4 sm:h-4 lg:w-5 lg:h-5' %}</div>
-
-      <div class="swiper-pagination flex items-center justify-center lg:hidden"></div>
       
       <ul class="flex swiper-wrapper" role="list">
         {%- for image in product.images -%}
@@ -39,7 +37,8 @@
             {% render 'image', image: image,
               preload: true,
               fit: 'cover',
-              sizes: "100px"
+              sizes: "100px",
+              aspect_ratio: 0.8
             %}
             <button class="block appearance-none inset-0 absolute" type="button" aria-label="Slide {{ forloop.index }}"></button>
           </li>
