add "in-store only" text to card

--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -35,8 +35,11 @@
 
 				{% endif %}
 			</div>
-			{% unless card_product.available %}<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">{{ 'products.product.sold_out' | t }}</span>
-			{% endunless %}
+
+			{% if card_product.template_suffix == 'in-store-only' %}
+				<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">In-Store Only</span>
+			{%  elsif card_product.available != true %}<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">{{ 'products.product.sold_out' | t }}</span>
+			{% endif %}
 
 			<a class="absolute inset-0 z-10 block" tabindex="-1" aria-hidden="true" title="{{ card_product.title }}" href="{{ card_product.url | within: collection }}"></a>
 
