updates to in store only products

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -596,7 +596,7 @@
     },
     {
       "type": "in_store_inquiry_button",
-      "name": "In-Store Inquiry Button",
+      "name": "In Store Inquiry Button",
       "limit": 1,
       "settings": [
         {
