--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -37,7 +37,7 @@
 			</div>
 
 			{% if card_product.template_suffix == 'in-store-only' %}
-				<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">In-Store Only</span>
+				<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">In Store Only</span>
 			{%  elsif card_product.available != true %}<span class="absolute top-[10px] right-[11px] uppercase z-10 text-small block">{{ 'products.product.sold_out' | t }}</span>
 			{% endif %}
 
@@ -55,7 +55,7 @@
 			{% endif %}
 			
 			<div class="flex space-x-3">
-				<h3 class="product-card--title"><a class="text-link" title="{{ card_product.title }}" href="{{ card_product.url | within: collection }}">{{ card_product.title }}</a></h3>{%- render 'price', product: card_product, use_variant: false -%}
+				<h3 class="product-card--title"><a class="text-link" title="{{ card_product.title }}" href="{{ card_product.url | within: collection }}">{{ card_product.title }}</a></h3>{% unless card_product.template_suffix == 'in-store-only' %}{%- render 'price', product: card_product, use_variant: false -%}{% endunless %}
 			</div>
 
 			{%- if show_rating and card_product.metafields.reviews.rating.value != blank -%}
